<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant_user_rate_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_note_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_note_subtitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_note_rate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_note_rate"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_note_rate_distinction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_note_title"
        tools:text="9,1/10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_note_rate_distinction"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_note_rate_count"
        app:layout_constraintEnd_toEndOf="@+id/restaurant_note_rate"
        app:layout_constraintStart_toStartOf="@+id/restaurant_note_rate"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_note_rate"
        tools:text="Table exceptionnelle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_note_rate_count"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/restaurant_note_rate_count"
        app:layout_constraintEnd_toEndOf="@+id/restaurant_note_rate_distinction"
        app:layout_constraintStart_toStartOf="@+id/restaurant_note_rate_distinction"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_note_rate_distinction" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_note_see_more"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/restaurant_note_rate_see_more"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/restaurant_note_rate_count"
        app:layout_constraintStart_toStartOf="@+id/restaurant_note_rate_count"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_note_rate_count" />


</androidx.constraintlayout.widget.ConstraintLayout>